objects/smagicinteract__Converse_App_Template_Map__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Converse_App__c</fullName>
        <label>Converse App</label>
        <referenceTo>smagicinteract__Converse_App__c</referenceTo>
        <relationshipLabel>Converse App Template Maps</relationshipLabel>
        <relationshipName>Converse_App_Template_Maps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMS_Template__c</fullName>
        <label>SMS Template</label>
        <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
        <relationshipLabel>Converse App Template Maps</relationshipLabel>
        <relationshipName>Converse_App_Template_Maps</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>smagicinteract__Type__c</fullName>
        <description>For mapping templates with converse Apps</description>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automation</fullName>
                </value>
                <value>
                    <fullName>Bulk/Blast</fullName>
                </value>
                <value>
                    <fullName>Conversation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Converse App Template Map</label>
    <nameField>
        <displayFormat>CATM-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Converse App Template Maps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>